# veloc

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
crates/veloc-c/: Cargo.toml
crates/veloc-c/src/: ast.rs  codegen.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/veloc-wasm/: Cargo.toml
crates/veloc-wasm/src/: engine.rs  func.rs  instance.rs  lib.rs  linker.rs  main.rs  store.rs  vm.rs  wasi.rs
crates/veloc-wasm/src/module/: metadata.rs  mod.rs  runtime.rs  types.rs
crates/veloc-wasm/src/translator/: memory.rs  mod.rs  table.rs  variable.rs
crates/veloc-wasm/tests/spec_test/: Cargo.toml
crates/veloc-wasm/tests/spec_test/src/: main.rs
crates/veloc_wasm/: Cargo.toml
crates/veloc_wasm/src/: engine.rs  error.rs  func.rs  instance.rs  lib.rs  linker.rs  main.rs  store.rs  translator.rs  vm.rs
crates/veloc_wasm/src/module/: metadata.rs  mod.rs  runtime.rs  types.rs
crates/veloc_wasm/src/translator/: control.rs  memory.rs  mod.rs  numeric.rs  table.rs  variable.rs
crates/veloc_wasm/tests/spec_test/: Cargo.toml
crates/veloc_wasm/tests/spec_test/src/: main.rs
src/: lib.rs
veloc/analyzer/: Cargo.toml
veloc/analyzer/src/: lib.rs  liveness.rs  manager.rs  regalloc.rs  use_def.rs
veloc/backend/: Cargo.toml
veloc/backend/src/: lib.rs
veloc/backend/src/x86_64/: codegen.rs
veloc/codegen/: Cargo.toml
veloc/codegen/src/: error.rs
veloc/codegen/src/x86_64/: codegen.rs  mod.rs  snippets.rs
veloc/interpreter/: Cargo.toml
veloc/interpreter/src/: bytecode.rs  error.rs  host.rs  interpreter.rs  lib.rs  value.rs
veloc/ir/: Cargo.toml
veloc/ir/docs/en/: instructions.md
veloc/ir/docs/zh/: instructions.md
veloc/ir/src/: builder.rs  constant.rs  dfg.rs  error.rs  function.rs  inst.rs  intrinsic.rs  layout.rs  lib.rs  module.rs  opcode.rs  printer.rs  types.rs  validator.rs
veloc/ir/src/passes/: mod.rs
veloc/ir/src/text/: format.rs  mod.rs  parser.rs  printer.rs
veloc/ir/tests/: vector_ir_test.rs
veloc/optimizer/: Cargo.toml
veloc/optimizer/src/: dce.rs  error.rs  lib.rs  manager.rs  metrics.rs  pass.rs  stats.rs
veloc/optimizer/src/passes/: mod.rs
veloc/optimizer/src/passes/function/: constant_folding.rs  dce.rs  mod.rs
veloc/optimizer/src/passes/loop/: mod.rs
veloc/optimizer/src/passes/module/: mod.rs
