[package]
name = "veloc"
version = "0.1.0"
edition = { workspace = true }


[workspace]
members = [
	"crates/*",
	"crates/veloc-wasm/tests/spec_test",
	"veloc/ir",
	"veloc/interpreter",
	"veloc/codegen",
	"veloc/analyzer",
	"veloc/optimizer",
]

[workspace.package]
edition = "2024"
rust-version = "1.93.0"

[workspace.dependencies]
# --- Internal Crates ---
veloc = { path = "." }
veloc-ir = { path = "veloc/ir" }
veloc-optimizer = { path = "veloc/optimizer" }
veloc-interpreter = { path = "veloc/interpreter" }
veloc-codegen = { path = "veloc/codegen" }
veloc-analyzer = { path = "veloc/analyzer" }
veloc-wasm = { path = "crates/veloc-wasm" }
veloc-c = { path = "crates/veloc-c" }

# --- WebAssembly ---
wasmparser = "0.244.0"
wat = "1.244.0"
wast = "229.0.0"
wiggle = "17.0.3"
wasi_common = { package = "wasi-common", version = "17.0.3" }
wasi_cap_std_sync = { package = "wasi-cap-std-sync", version = "17.0.3" }

# --- System / Low-level ---
libc = "0.2.180"
mmap-rs = "0.7.0"

# --- Data Structures ---
hashbrown = { version = "0.14" }
bitvec = "1.0"
smallvec = { version = "1.13", default-features = false }
cranelift-entity = { version = "0.128.3", default-features = false }

# --- Parser ---
chumsky = "0.12.0"

# --- Async ---
futures = "0.3"

# --- Logging ---
log = "0.4"
env_logger = "0.11"

# --- CLI ---
clap = { version = "4.5", features = ["derive"] }

# --- Error Handling ---
anyhow = "1.0"

# --- External Local Dependencies ---
elf_loader = { path = "../elf_loader" }

[dependencies]
veloc-ir = { workspace = true }
veloc-interpreter = { workspace = true }
veloc-codegen = { workspace = true }
cranelift-entity = { workspace = true }
hashbrown = { workspace = true }

[features]
default = ["std"]
std = ["hashbrown/default"]

[profile.release]
debug = true
