[package]
name = "veloc-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
veloc = { workspace = true }
veloc-ir = { workspace = true }
veloc-optimizer = { workspace = true }
veloc-analyzer = { workspace = true }
cranelift-entity = { workspace = true }
libc = { workspace = true }
mmap-rs = { workspace = true }
wasmparser = { workspace = true }
wat = { workspace = true }
hashbrown = { workspace = true }
elf_loader = { workspace = true }
wasi_common = { workspace = true }
wasi_cap_std_sync = { workspace = true }
wiggle = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[features]
default = ["std"]
std = ["veloc/std"]

[dev-dependencies]
