[package]
name = "veloc-interpreter"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
veloc-ir = { workspace = true }
veloc-analyzer = { workspace = true }
hashbrown = { workspace = true }
cranelift-entity = { workspace = true }
libm = "0.2"

[features]
default = ["std"]
std = ["veloc-ir/std"]
