[package]
name = "veloc_ir"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.11.0", default-features = false }
cranelift-entity = { workspace = true }
hashbrown = { workspace = true, features = ["ahash", "inline-more"] }
thiserror = { version = "2.0", default-features = false }
smallvec = { version = "1.13", default-features = false }

[features]
default = ["std"]
std = []




