[package]
name = "veloc-ir"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
bitflags = { version = "2.11.0", default-features = false }
cranelift-entity = { workspace = true }
hashbrown = { workspace = true, features = ["ahash", "inline-more"] }
thiserror = { version = "2.0", default-features = false }
smallvec = { workspace = true }
chumsky = { workspace = true }

[features]
default = ["std"]
std = []
