[package]
name = "veloc-optimizer"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
veloc-ir = { workspace = true }
veloc-analyzer = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }

[features]
default = ["std"]
std = ["veloc-ir/std"]
